--- a/ressources/config/client_globals.rc
+++ b/ressources/config/client_globals.rc
@@ -4,9 +4,11 @@
 #   - standard_port
 #   - standard_depth
 #   - standard_time
+#   - standard_algorithm
 
 help_text=You have the following options:\n\t"-h" or "--help" to display this help menu.\n\t"-i" or "--ip" to change the ip address of the server.\n\t\tStandard ip: 127.0.0.1\n\t"-p" or "--port" to change the port of the server.\n\t\tStandard port: 7777\n
 standard_ip=127.0.0.1
 standard_port=7777
 standard_depth=0
 standard_time=0
+standard_algorithm=0
