--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,5 @@
 cmake_minimum_required(VERSION 3.28.2)
 project(REVXT2)
-add_executable(client02 main.cpp)
+include_directories(./include)
+include_directories(src)
+add_executable(client02 main.cpp include/constants.h src/constants.cpp)
