added CMake files to every subfolder and configured a launch and debug target

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,25 @@
 cmake_minimum_required(VERSION 3.28.2)
-project(REVXT2)
-include_directories(./include)
-include_directories(src)
-add_executable(client02 main.cpp include/constants.h src/constants.cpp)
+set(PROJECT_NAME "REVXT2" CACHE STRING "Project name")
+project(${PROJECT_NAME})
+
+set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/out/build)
+
+add_executable(${PROJECT_NAME} main.cpp)
+
+# List every subdirectory needed for the build-process here
+add_subdirectory(src)
+
+# List custom targets here
+add_custom_target(
+  launch
+    COMMAND $<TARGET_FILE:${PROJECT_NAME}> -h
+    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+    COMMENT "Running ${PROJECT_NAME} executable"
+)
+
+add_custom_target(
+  debug
+    COMMAND ${CMAKE_DEBUGGER} $<TARGET_FILE:${PROJECT_NAME}>
+    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+    COMMENT "Debugging ${PROJECT_NAME} executable"
+)
